apache/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-gitops
spec:
  replicas: 5
  selector:
    matchLabels:
      app: apache-gitops
  template:
    metadata:
      labels:
        app: apache-gitops
    spec:
      containers:
      - name: apache
        image: httpd:2.4
        ports:
        - containerPort: 80
