apache/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-gitops
spec:
  selector:
    app: apache-gitops
  ports:
  - port: 80
    targetPort: 80
