apache/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-gitops
spec:
  ingressClassName: nginx
  rules:
  - host: gitops.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apache-gitops
            port:
              number: 80
